# OOP_3rd_semestr

./: CMakeLists.txt
C_Stack/: CMakeLists.txt  Header.h  stack.cpp
Calculator_algorithmic_exp/: CMakeList.txt
D_Massive/: CMakeLists.txt  DMassiv.cpp  DMassiv.h
Monom/Monom/: Header.h  Monom.vcxproj
lib_Algorithms/: CMakeLists.txt  algoritms.cpp  algoritms.h
lib_TList/: CMakeLists.txt
main/: main.cpp
